Fix Up RealAntennas configs And also hopefully fix up node attachments. Also added attach nodes for the solar panels and solar covers for the cargo dragon.

--- a/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
@@ -12,11 +12,12 @@ PART
 
 	MODEL
 	{
-		model = ROCapsules/Assets/PhoenixIndustries/DragonCHUTE
+		model = ROCapsules/Assets/DECQ/Dragon/DragonCHUTE
 		scale = 1.0, 1.0, 1.0
 	}
 
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 
 	node_stack_Chute = 0.0, 1.4855, -1.2175, 0.0, 1.0, 0.0, 1
 
@@ -32,7 +33,7 @@ PART
 	cost = 150
 	category = Utility
 	subcategory = 0
-	title = Dragon Cargo Parachute
+	title = Cargo Dragon Parachute
 	manufacturer = SpaceX
 	description = Cargo Dragon Parachute
 	tags = Spacex, Dragon, CRS
