--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CM.cfg
@@ -26,8 +26,8 @@ PART
 		name = ROC-Dragon2CMInterior
 	}
 
-	scale = 1
-	rescaleFactor = 1
+	scale = 1.0
+	rescaleFactor = 1.0
 
 	node_stack_bottom = 0.0, -1.600847, 0.0, 0.0, -1.0, 0.0, 3
 	node_stack_mainChutes = 0.0, 1.481525, -1.557307, 0.0, 1.0, 0.0, 2
@@ -304,7 +304,7 @@ PART
 	//  Comms
 	//  ============================================================================
 
-	MODULE:AFTER[RealismOverhaul]:NEEDS[!RealAntennas]
+	MODULE:AFTER[RealismOverhaul]
 	{
 		name = ModuleDataTransmitter
 		antennaType = DIRECT
@@ -316,22 +316,6 @@ PART
 		requiredResource = ElectricCharge
 		packetResourceCost = 0.04
 		DeployFxModules = 0
-	}
-
-	!MODULE[ModuleDataTransmitter]:BEFORE[RealAntennas],* {}
-
-	MODULE:BEFORE[RealAntennas]
-	{
-		name = ModuleRealAntenna
-		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
-		RFBand = K	//Default to K-band
-	}
-
-	MODULE:BEFORE[RealAntennas]
-	{
-		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = S		//Default to S-band
 	}
 
 	//  ============================================================================
@@ -394,6 +378,28 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}
+	}
+}
+
+//  ================================================================================
+//  Configure RealAntennas
+//  ================================================================================
+
+@PART[ROC-Dragon2CM]:BEFORE[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
+		RFBand = K	//Default to K-band
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 1.5
+		RFBand = S		//Default to S-band
 	}
 }
 
