--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonAdapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonAdapter.cfg
@@ -16,11 +16,13 @@ PART
 		scale = 1.0, 1.0, 1.0
 	}
 
-	rescaleFactor = 1.6
+	scale = 1.0
+	rescaleFactor = 1.5646
 
 	node_stack_top = 0.0, 0.03, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.14, 0.0, 0.0, -1.0, 0.0, 2
 
+	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
 
 	fx_gasBurst_white = 0.0, 0.14, 0.0, 0.0, 1.0, 0.0, decouple
@@ -35,7 +37,7 @@ PART
 	cost = 150
 	category = Coupling
 	subcategory = 0
-	title = Dragon Cargo Vehicle Adapter
+	title = Cargo Dragon Vehicle Adapter
 	manufacturer = SpaceX
 	description = A simple piece of composite and metal for which the Dragon Trunk can be seamlessly attached and detached to it's Falcon launch vehicle.
 	tags = Spacex, Dragon, CRS
