--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCM.cfg
@@ -16,13 +16,15 @@ PART
 		scale = 1.0, 1.0, 1.0
 	}
 
-	rescaleFactor = 1.6
+	scale = 1.0
+	rescaleFactor = 1.5646
 
-	node_stack_CAP = 0.0, 1.398, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_Chute = 0.0, 1.40, -1.18, 0.0, -1.0, 0.0, 1
-	node_stack_top = 0.0, 1.03, 0.0, 0, 1.0, 0, 1
+	node_stack_CAP = 0.0, 0.9364, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_Chute = 0.0, 0.95872, -0.7159, 0.0, -1.0, 0.0, 2
+	node_stack_top = 0.0, 1.1952, 0.0, 0, -1.0, 0, 2
 	node_stack_bottom = 0.0, -0.68, 0.0, 0, -1.0, 0, 2
 
+	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
@@ -34,7 +36,7 @@ PART
 	cost = 150
 	category = Pods
 	subcategory = 0
-	title = Dragon Cargo Capsule
+	title = Cargo Dragon Capsule
 	manufacturer = SpaceX
 	description = The Dragon Capsule is equipped with six-direction Draco RCS thrusters, fuel, interior and docking lighting, opening front panels for cargo access and A PICA-X heatshield for reentry. It can be used with stacking and attachable cargo and may be used to store science data.
 	tags = Spacex, Dragon, CRS
@@ -211,7 +213,7 @@ PART
 	//  Comms
 	//  ============================================================================
 
-	MODULE:AFTER[RealismOverhaul]:NEEDS[!RealAntennas]
+	MODULE:AFTER[RealismOverhaul]
 	{
 		name = ModuleDataTransmitter
 		antennaType = DIRECT
@@ -223,22 +225,6 @@ PART
 		requiredResource = ElectricCharge
 		packetResourceCost = 0.04
 		DeployFxModules = 0
-	}
-
-	!MODULE[ModuleDataTransmitter]:BEFORE[RealAntennas],* {}
-
-	MODULE:BEFORE[RealAntennas]
-	{
-		name = ModuleRealAntenna
-		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
-		RFBand = K	//Default to K-band
-	}
-
-	MODULE:BEFORE[RealAntennas]
-	{
-		name = ModuleRealAntenna
-		referenceGain = 1.5
-		RFBand = S		//Default to S-band
 	}
 
 	//  ============================================================================
@@ -301,6 +287,28 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}
+	}
+}
+
+//  ================================================================================
+//  Configure RealAntennas
+//  ================================================================================
+
+@PART[ROC-DragonCM]:BEFORE[RealAntennas]
+{
+	!MODULE[ModuleDataTransmitter],* {}
+
+	MODULE
+	{
+		name = ModuleRealAntenna
+		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
+		RFBand = K	//Default to K-band
+	}
+	MODULE
+	{
+		name = ModuleRealAntenna
+		referenceGain = 1.5
+		RFBand = S		//Default to S-band
 	}
 }
 
