--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCap.cfg
@@ -16,12 +16,14 @@ PART
 		scale = 1.0, 1.0, 1.0
 	}
 
-	rescaleFactor = 1.6
+	scale = 1.0
+	rescaleFactor = 1.5646
 
 	node_stack_bottom01 = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
 
 	CenterOfDisplacement = 0.0, 0.2, 0.0
 
+	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,0,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
@@ -36,7 +38,7 @@ PART
 	cost = 150
 	category = Aero
 	subcategory = 0
-	title = Dragon Cargo Nose Fairing
+	title = Cargo Dragon Nose Fairing
 	manufacturer = SpaceX
 	description = A blunt nose cone to be fitted atop of a DragonRider spacecraft to both protect the docking system and make it more aerodynamic.
 	tags = Spacex, Dragon, CRS
