--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
@@ -16,15 +16,17 @@ PART
 		scale = 1.0, 1.0, 1.0
 	}
 
-	rescaleFactor = 1.6
+	scale = 1.0
+	rescaleFactor = 1.5
 
 	node_stack_bottom = 0.0, -0.07, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, 0.025, 0.0, 0.0, 1.0, 0.0, 2
 
-	attachRules = 1,0,1,0,0
-
 	CoPOffset = 0.0, 1.0, 0.0
 	CoLOffset = 0.0, -0.15, 0.0
+
+	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
@@ -35,7 +37,7 @@ PART
 	cost = 150
 	category = Thermal
 	subcategory = 0
-	title = Dragon Cargo PICA-X Heatshield
+	title = Cargo Dragon PICA-X Heatshield
 	manufacturer = SpaceX
 	description = Highly durable heatshield, developed with reuse in mind and able to withstand high-energy reentries.
 	tags = Spacex, Dragon, PicaX, CRS
