--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSC.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSC.cfg
@@ -16,10 +16,13 @@ PART
 		scale = 1.0, 1.0, 1.0
 	}
 
-	rescaleFactor = 1.6
+	scale = 1.0
+	rescaleFactor = 1.5646
 
 	node_attach = 0.0, 0.0, -0.1, 0.0, 0.0, -1.0
+	node_stack_fairingattach = 0.0, 0.767, 0.0, 0.0, -1.0, 0.0
 
+	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,1,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, decouple
@@ -34,7 +37,7 @@ PART
 	cost = 150
 	category = Structural
 	subcategory = 0
-	title = Dragon Cargo Trunk Solar Panel Fairing
+	title = Cargo Dragon Trunk Solar Panel Fairing
 	manufacturer = SpaceX
 	description = A cover to attach to the Dragon trunk in order to make it aerodynamic and shield the solar arrays from the harshness of ascent.  Jettisoned shortly after Dragon separation.
 	tags = Spacex, Dragon, CRS
