--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSM.cfg
@@ -16,12 +16,18 @@ PART
 		scale = 1.0, 1.0, 1.0
 	}
 
-	rescaleFactor = 1.6
+	scale = 1.0
+	rescaleFactor = 1.5646
 
-	node_stack_top = 0.0, 0.75, 0.0, 0.0, 1.0, 0.0, 2
+	node_stack_top = 0.0, 1.2, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -1.2, 0.0, 0.0, -1.0, 0.0, 2
-	node_stack_trunk = 0.0, -0.5, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_trunk = 0.0, 0.5401, 0.0, 0.0, -1.0, 0.0, 2
+	node_stack_solarattach1 = -0.9907, -0.2493, -0.064, 0.0, 1.0, 0.0, 2
+	node_stack_solarattach2 = 0.9907, -0.2493, -0.064, 0.0, -1.0, 0.0, 2
+	node_stack_fairingattach1 = -1.1504, 0.588, 0, 0.0, 1.0, 0.0, 2
+	node_stack_fairingattach2 = 1.1504, 0.588, 0, 0.0, -1.0, 0.0, 2
 
+	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
@@ -36,7 +42,7 @@ PART
 	cost = 150
 	category = Structural
 	subcategory = 0
-	title = Dragon Cargo Trunk
+	title = Cargo Dragon Trunk
 	manufacturer = SpaceX
 	description = The cargo trunk is quipped with a small battery and decoupler to detach a small payload from inside. Designed to have two solar panels with solar panel covers attached to it in pairs.
 	tags = Spacex, Dragon, CRS
