--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSP.cfg
@@ -16,11 +16,14 @@ PART
 		scale = 1.9, 1.9, 1.9
 	}
 
-	rescaleFactor = 1.6
+	scale = 1.0
+	rescaleFactor = 1.5646
 
 	node_attach = 0.0, 0.05, 0.0, 0.0, -1.0, 0.0
+	node_stack_solarattach = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, 2
 
-	attachRules = 0,1,0,1,1
+	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+	attachRules = 1,1,0,0,1
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
@@ -31,7 +34,7 @@ PART
 	cost = 150
 	category = Electrical
 	subcategory = 0
-	title = Dragon Cargo Trunk Solar Panel
+	title = Cargo Dragon Trunk Solar Panel
 	manufacturer = SpaceX
 	description = Large and efficient solar panel array designed to attach to Dragon trunk to provide power for orbital purposes.
 	tags = Spacex, Dragon, CRS
