Fixed Rcs Issues, standardize configs, hopefully fix cargo dragon rcs issues

--- a/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/DECQ/DragonChute.cfg
@@ -13,7 +13,6 @@ PART
 	MODEL
 	{
 		model = ROCapsules/Assets/DECQ/Dragon/DragonCHUTE
-		scale = 1.0, 1.0, 1.0
 	}
 
 	scale = 1.0
@@ -21,7 +20,6 @@ PART
 
 	node_stack_Chute = 0.0, 1.4855, -1.2175, 0.0, 1.0, 0.0, 1
 
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
 
 	//  ============================================================================
@@ -37,8 +35,7 @@ PART
 	manufacturer = SpaceX
 	description = Cargo Dragon Parachute
 	tags = Spacex, Dragon, CRS
-
-	stagingIcon = PARACHUTES
+	bulkheadProfiles = size2
 
 	sound_parachute_open = activate
 
@@ -48,15 +45,18 @@ PART
 
 	mass = 0.10
 	dragModelType = default
-	crashTolerance = 12
-	breakingForce = 250
-	breakingTorque = 250
-	stageOffset = -1
-	maxTemp = 900
-	skinMaxTemp = 1200
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
+	angularDrag = 0.1
+	crashTolerance = 10
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	emissiveConstant = 0.7
+	breakingForce = 100
+	breakingTorque = 50
+	bodyLiftMultiplier = 0
+	stagingIcon = PARACHUTES
+	fuelCrossFeed = False
+	stageOffset = 1
+	childStageOffset = 1
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -87,11 +87,9 @@ PART
 	{
 		name = RealChuteModule
 		caseMass = 0.05
-		timer = 0
-		mustGoDown = false
+		mustGoDown = True
 		spareChutes = 0
-		cutSpeed = 0.25
-		secondaryChute = False
+		cutSpeed = 0.5
 
 		PARACHUTE
 		{
@@ -149,7 +147,7 @@ PART
 	{
 		name = ModuleDragModifier
 		dragCubeName = SEMIDEPLOYED
-		dragModifier = 0.67
+		dragModifier = 0.5
 	}
 
 	MODULE
