--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CM.cfg
@@ -35,13 +35,9 @@ PART
 	node_stack_mainCover = 0.0, 0.0, -1.5, 0.0, 1.0, 0.0, 2
 	node_stack_top = 0.0, 1.974, 0.0, 0.0, 1.0, 0.0, 1
 
-	CoPOffset = 0.0, 1.0, 0.0
-	CoMOffset = 0.0, -0.325, 0.0
+	CoPOffset = 0.0, 0.5, 0.0
 	CoLOffset = 0.0, -0.45, 0.0
-	CenterOfDisplacement = 0.0, 0.5, 0.0
-
-	buoyancyUseSine = False
-	buoyancy = 1.1
+	CoMOffset = 0.0, -1.0, 0.0
 
 	attachRules = 1,0,1,1,0
 
@@ -49,9 +45,9 @@ PART
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = commandModules
+	entryCost = 10000
+	cost = 4500
 	category = Pods
 	subcategory = 0
 	title = Crew Dragon Capsule
@@ -62,6 +58,7 @@ PART
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
 	CrewCapacity = 6
+	bulkheadProfiles = size3, size1
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -69,19 +66,14 @@ PART
 
 	mass = 6.825
 	dragModelType = default
+	breakingForce = 250
+	breakingTorque = 250
 	maximum_drag = 0.20
 	minimum_drag = 0.15
 	angularDrag = 2
-	bodyLiftOnlyUnattachedLift = True
-	bodyLiftOnlyAttachName = bottom
 	crashTolerance = 12
-	breakingForce = 250
-	breakingTorque = 250
-	maxTemp = 900
-	skinMaxTemp = 3000
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
 	fuelCrossFeed = True
 
 	//  ============================================================================
@@ -92,25 +84,26 @@ PART
 	{
 		name = ModuleCommand
 		minimumCrew = 0
+		hasHibernation = True
+		hibernationMultiplier = 0.625
+
 		RESOURCE
 		{
 			name = ElectricCharge
 			rate = 0.7
-			hasHibernation = True
-			hibernationMultiplier = 0.625
 		}
 	}
 
 	MODULE
 	{
 		name = ModuleSAS
-		SASServiceLevel = 4
+		SASServiceLevel = 3
 	}
 
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, -0.12
+		DescentModeCoM = 0, 0, -0.15
 	}
 
 	MODULE
@@ -126,6 +119,16 @@ PART
 	MODULE
 	{
 		name = ModuleAnimateGeneric
+		animationName = KK_SpX_dockingport
+		actionGUIName = Toggle Dockingport
+		startEventGUIName = Extend Dockingport
+		endEventGUIName = Retract Dockingport
+		layer = 1
+	}
+
+	MODULE
+	{
+		name = ModuleAnimateGeneric
 		animationName = KK_SpXCD_windows
 		actionGUIName = Toggle Lights
 		startEventGUIName = Lights On
@@ -133,15 +136,6 @@ PART
 		toggleAction = True
 		defaultActionGroup = Light
 		layer = 2
-	}
-
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = KK_SpX_dockingport
-		actionGUIName = Toggle Dockingport
-		startEventGUIName = Extend Dockingport
-		endEventGUIName = Retract Dockingport
 	}
 
 	MODULE
@@ -173,21 +167,6 @@ PART
 
 	MODULE
 	{
-		name = ModuleLiftingSurface
-		useInternalDragModel = False
-		deflectionLiftCoeff = 1.0
-		liftingSurfaceCurve = CapsuleBottom
-		disableBodyLift = False
-		omnidirectional = False
-		perpendicularOnly = True
-		transformDir = Y
-		transformSign = -1
-		nodeEnabled = True
-		attachNodeName = bottom
-	}
-
-	MODULE
-	{
 		name = ModuleDockingNode
 		referenceAttachNode = top
 		nodeType = NASADock
@@ -204,13 +183,6 @@ PART
 		minDistanceToReEngage = 0.25
 		undockEjectionForce = 0.1
 		stagingEnabled = False
-	}
-
-	MODULE
-	{
-		name = ModuleConductionMultiplier
-		modifiedConductionFactor = 0.003
-		convectionFluxThreshold = 3000
 	}
 
 	MODULE
@@ -253,7 +225,6 @@ PART
 		enableZ = True
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running2
-		atmosphereCurve
 		PROPELLANT
 		{
 			name = MMH
@@ -301,24 +272,6 @@ PART
 	}
 
 	//  ============================================================================
-	//  Comms
-	//  ============================================================================
-
-	MODULE:AFTER[RealismOverhaul]
-	{
-		name = ModuleDataTransmitter
-		antennaType = DIRECT
-		antennaPower = 64
-		antennaCombinable = True
-		antennaCombinableExponent = 2.0
-		packetInterval = 1.0
-		packetSize = 2.0
-		requiredResource = ElectricCharge
-		packetResourceCost = 0.04
-		DeployFxModules = 0
-	}
-
-	//  ============================================================================
 	//  Animations and Textures
 	//  ============================================================================
 
@@ -356,7 +309,7 @@ PART
 			AUDIO_MULTI_POOL
 			{
 				channel = Ship
-				transformName = draco
+				transformName = draco_top
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.1 0.0
@@ -369,7 +322,7 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = draco
+				transformName = draco_top
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -395,6 +348,7 @@ PART
 		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
 		RFBand = K	//Default to K-band
 	}
+
 	MODULE
 	{
 		name = ModuleRealAntenna
