--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute2.cfg
@@ -19,9 +19,7 @@
 	rescaleFactor = 1.0
 
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
-	CoMOffset = 0.0, -1.4, 1.0
 
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
 
 	//  ============================================================================
@@ -37,6 +35,7 @@
 	manufacturer = SpaceX
 	description = Crew Dragon Drogue Parachute
 	tags = Spacex, Dragon, Crew
+	bulkheadProfiles = size2
 
 	sound_parachute_open = activate
 
@@ -46,14 +45,18 @@
 
 	mass = 0.1
 	dragModelType = default
-	crashTolerance = 12
-	maxTemp = 900
-	skinMaxTemp = 1200
-	breakingForce = 250
-	breakingTorque = 250
+	angularDrag = 0.1
+	crashTolerance = 10
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	emissiveConstant = 0.7
+	breakingForce = 100
+	breakingTorque = 50
 	bodyLiftMultiplier = 0
-	stageOffset = -1
 	stagingIcon = PARACHUTES
+	fuelCrossFeed = False
+	stageOffset = 1
+	childStageOffset = 1
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -85,11 +88,9 @@
 	{
 		name = RealChuteModule
 		caseMass = 0.075
-		timer = 0
-		mustGoDown = false
+		mustGoDown = True
 		spareChutes = 0
-		cutSpeed = 0.25
-		secondaryChute = False
+		cutSpeed = 0.5
 
 		PARACHUTE
 		{
@@ -154,7 +155,7 @@
 	{
 		name = ModuleDragModifier
 		dragCubeName = DEPLOYED
-		dragModifier = 8
+		dragModifier = 10
 	}
 }
 
