--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonAdapter.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonAdapter.cfg
@@ -22,7 +22,6 @@ PART
 	node_stack_top = 0.0, 0.03, 0.0, 0.0, 1.0, 0.0, 2
 	node_stack_bottom = 0.0, -0.14, 0.0, 0.0, -1.0, 0.0, 2
 
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,0
 
 	fx_gasBurst_white = 0.0, 0.14, 0.0, 0.0, 1.0, 0.0, decouple
@@ -32,15 +31,16 @@ PART
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
-	category = Coupling
+	TechRequired = advAerodynamics
+	entryCost = 1500
+	cost = 100
+	category = Aero
 	subcategory = 0
 	title = Cargo Dragon Vehicle Adapter
 	manufacturer = SpaceX
 	description = A simple piece of composite and metal for which the Dragon Trunk can be seamlessly attached and detached to it's Falcon launch vehicle.
 	tags = Spacex, Dragon, CRS
+	bulkheadProfiles = size1
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -48,20 +48,18 @@ PART
 
 	mass = 0.2
 	dragModelType = default
-	maximum_drag = 0.3
-	minimum_drag = 0.2
-	angularDrag = 2
-	crashTolerance = 12
 	breakingForce = 250
 	breakingTorque = 250
+	maximum_drag = 0.20
+	minimum_drag = 0.15
+	angularDrag = 2
+	crashTolerance = 12
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	fuelCrossFeed = False
+	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
-	maxTemp = 1073.15
-	skinMaxTemp = 1073.15
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
-	fuelCrossFeed = False	
 
 	//  ============================================================================
 	//  Modules and Resources
