--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCM.cfg
@@ -24,16 +24,19 @@ PART
 	node_stack_top = 0.0, 1.1952, 0.0, 0, -1.0, 0, 2
 	node_stack_bottom = 0.0, -0.68, 0.0, 0, -1.0, 0, 2
 
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
+	CoPOffset = 0.0, 0.5, 0.0
+	CoLOffset = 0.0, -0.45, 0.0
+	CoMOffset = 0.0, -1.0, 0.0
+
 	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = commandModules
+	entryCost = 10000
+	cost = 4500
 	category = Pods
 	subcategory = 0
 	title = Cargo Dragon Capsule
@@ -44,6 +47,7 @@ PART
 	vesselType = Ship
 	stagingIcon = COMMAND_POD
 	CrewCapacity = 0
+	bulkheadProfiles = size3, size1
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -51,17 +55,15 @@ PART
 
 	mass = 4
 	dragModelType = default
-	maximum_drag = 0.3
-	minimum_drag = 0.2
-	angularDrag = 2
-	crashTolerance = 12
 	breakingForce = 250
 	breakingTorque = 250
-	maxTemp = 900
-	skinMaxTemp = 3000
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
+	maximum_drag = 0.20
+	minimum_drag = 0.15
+	angularDrag = 2
+	crashTolerance = 12
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	fuelCrossFeed = True
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -71,25 +73,26 @@ PART
 	{
 		name = ModuleCommand
 		minimumCrew = 0
+		hasHibernation = True
+		hibernationMultiplier = 0.625
+
 		RESOURCE
 		{
 			name = ElectricCharge
 			rate = 0.7
-			hasHibernation = True
-			hibernationMultiplier = 0.625
 		}
 	}
 
 	MODULE
 	{
 		name = ModuleSAS
-		SASServiceLevel = 4
+		SASServiceLevel = 3
 	}
 
 	MODULE
 	{
 		name = AdjustableCoMShifter
-		DescentModeCoM = 0, 0, -0.12
+		DescentModeCoM = 0, 0, -0.15
 	}
 
 	MODULE
@@ -124,45 +127,12 @@ PART
 
 	MODULE
 	{
-		name = ModuleConductionMultiplier
-		modifiedConductionFactor = 0.003
-		convectionFluxThreshold = 3000
-	}
-
-	MODULE
-	{
 		name = ModuleRCSFX
 		stagingEnabled = False
 		thrusterTransformName = rcsThrust
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
-		PROPELLANT
-		{
-			name = MMH
-			ratio = 0.5629
-		}
-		PROPELLANT
-		{
-			name = NTO
-			ratio = 0.4371
-		}
-		atmosphereCurve
-		{
-			key = 0 300
-			key = 1 100
-			key = 4 0.001
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleRCSFX
-		stagingEnabled = False
-		thrusterTransformName = thrustTransform
-		thrusterPower = 0.4
-		resourceFlowMode = STAGE_PRIORITY_FLOW
-		runningEffectName = running2
 		PROPELLANT
 		{
 			name = MMH
@@ -210,24 +180,6 @@ PART
 	}
 
 	//  ============================================================================
-	//  Comms
-	//  ============================================================================
-
-	MODULE:AFTER[RealismOverhaul]
-	{
-		name = ModuleDataTransmitter
-		antennaType = DIRECT
-		antennaPower = 64
-		antennaCombinable = True
-		antennaCombinableExponent = 2.0
-		packetInterval = 1.0
-		packetSize = 2.0
-		requiredResource = ElectricCharge
-		packetResourceCost = 0.04
-		DeployFxModules = 0
-	}
-
-	//  ============================================================================
 	//  Animations and Textures
 	//  ============================================================================
 
@@ -260,33 +212,6 @@ PART
 				localRotation = -90, 0, 0
 			}
 		}
-		running2
-		{
-			AUDIO
-			{
-				channel = Ship
-				transformName = thrustTransform
-				clip = sound_rocket_mini
-				volume = 0.0 0.0
-				volume = 0.1 0.0
-				volume = 0.5 0.025
-				volume = 1.0 0.1
-				pitch = 0.0 0.75
-				pitch = 1.0 1.5
-				loop = true
-			}
-			MODEL_MULTI_PARTICLE
-			{
-				modelName = Squad/FX/Monoprop_small
-				transformName = thrustTransform
-				emission = 0.0 0.0
-				emission = 0.1 0.0
-				emission = 1.0 1.0
-				speed = 0.0 0.8
-				speed = 1.0 1.0
-				localRotation = -90, 0, 0
-			}
-		}
 	}
 }
 
@@ -304,6 +229,7 @@ PART
 		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
 		RFBand = K	//Default to K-band
 	}
+
 	MODULE
 	{
 		name = ModuleRealAntenna
