--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCap.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCap.cfg
@@ -19,11 +19,10 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.5646
 
-	node_stack_bottom01 = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
+	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0
 
 	CenterOfDisplacement = 0.0, 0.2, 0.0
 
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,0,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
@@ -33,35 +32,35 @@ PART
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = advAerodynamics
+	entryCost = 1500
+	cost = 100
 	category = Aero
 	subcategory = 0
 	title = Cargo Dragon Nose Fairing
 	manufacturer = SpaceX
 	description = A blunt nose cone to be fitted atop of a DragonRider spacecraft to both protect the docking system and make it more aerodynamic.
 	tags = Spacex, Dragon, CRS
+	bulkheadProfiles = size1
 
 	//  ============================================================================
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 0.025
+	mass = 0.1
 	dragModelType = default
-	maximum_drag = 0.3
-	minimum_drag = 0.2
-	angularDrag = 2
-	crashTolerance = 12
-	breakingForce = 250
-	breakingTorque = 250
+	maximum_drag = 0.1
+	minimum_drag = 0.1
+	angularDrag = 0.5
+	crashTolerance = 14
+	breakingForce = 100
+	breakingTorque = 100
+	maxTemp = 573.15
+	skinMaxTemp = 673.15
+	fuelCrossFeed = False
+	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
-	maxTemp = 1073.15
-	skinMaxTemp = 1073.15
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -70,7 +69,7 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 25
-		explosiveNodeID = bottom01
+		ejectionForce = 20
+		explosiveNodeID = bottom
 	}
 }
