--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover2.cfg
@@ -19,7 +19,6 @@ PART
 	rescaleFactor = 1.0
 
 	node_stack_bottom = 0.0, -0.2, 0.0, 0.0, -1.0, 0.0, 2
-	CoMOffset = 0.0, 0.0, 1.0
 
 	attachRules = 1,0,1,1,0
 
@@ -30,15 +29,16 @@ PART
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
-	category = Coupling
+	TechRequired = advAerodynamics
+	entryCost = 1500
+	cost = 100
+	category = Aero
 	subcategory = 0
 	title = Crew Dragon Drogue Cover
 	manufacturer = SpaceX
 	description = Crew Dragon Drogue Cover
 	tags = Spacex, Dragon, Crew
+	bulkheadProfiles = size1
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -46,20 +46,18 @@ PART
 
 	mass = 0.025
 	dragModelType = default
+	breakingForce = 250
+	breakingTorque = 250
 	maximum_drag = 0.20
 	minimum_drag = 0.15
 	angularDrag = 2
 	crashTolerance = 12
-	breakingForce = 250
-	breakingTorque = 250
-	maxTemp = 900
-	skinMaxTemp = 3000
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	fuelCrossFeed = True
+	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
-	fuelCrossFeed = False
 
 	//  ============================================================================
 	//  Modules and Resources
