--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2HS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2HS.cfg
@@ -34,31 +34,22 @@
 	scale = 1.0
 	rescaleFactor = 1.0
 
-	CoPOffset = 0.0, 4.0, 0.0
-	CoLOffset = 0.0, -0.5, 0.0
-	//CenterOfBuoyancy = 0.0, 2.5, 0.0
-	CenterOfDisplacement = 0.0, 2.0, 0.0
-
 	attachRules = 1,0,1,0,0
-
-	DRAG_CUBE
-	{
-		cube = Clean, 13.6,0.7656,3.826, 13.6,0.7734,1.967, 10.99,0.9577,0.3365, 10.99,0.9495,0.4388, 13.6,0.7703,2.773, 13.6,0.7716,1.967, 0,0.01101,0, 3.75,0.4864,3.75
-	}
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = heavyAerodynamics
+	entryCost = 1800
+	cost = 900
 	category = Thermal
 	subcategory = 0
 	title = Crew Dragon PICA-X Heatshield
 	manufacturer = SpaceX
 	description = Highly durable heatshield, developed with reuse in mind and able to withstand high-energy reentries.
 	tags = Spacex, Dragon, PicaX, Crew
+	bulkheadProfiles = size3
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -66,20 +57,16 @@
 
 	mass = 0.2
 	dragModelType = default
-	maximum_drag = 0.20
-	minimum_drag = 0.15
+	maximum_drag = 0.2
+	minimum_drag = 0.2
 	angularDrag = 2
-	bodyLiftOnlyUnattachedLift = True
-	bodyLiftOnlyAttachName = bottom
-	buoyancy = 0.0
-	breakingForce = 250
-	breakingTorque = 250
+	breakingForce = 200
+	breakingTorque = 200
 	crashTolerance = 12
-	skinMaxTemp = 3600
-	maxTemp = 2400
-	emissiveConstant = 0.75
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
+	maxTemp = 773.15
+	skinMaxTemp = 2773.15
+	fuelCrossFeed = False
+	PhysicsSignificance = 0
 	stageOffset = 1
 	childStageOffset = 1
 
@@ -88,8 +75,9 @@
 	heatShieldTag = Lunar
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
-
-	fuelCrossFeed = False
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -99,7 +87,7 @@
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = False
-		deflectionLiftCoeff = 4
+		deflectionLiftCoeff = 2.0
 		liftingSurfaceCurve = CapsuleBottom
 		disableBodyLift = False
 		omnidirectional = False
