--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
@@ -22,25 +22,22 @@ PART
 	node_stack_bottom = 0.0, -0.07, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, 0.025, 0.0, 0.0, 1.0, 0.0, 2
 
-	CoPOffset = 0.0, 1.0, 0.0
-	CoLOffset = 0.0, -0.15, 0.0
-
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = heavyAerodynamics
+	entryCost = 1800
+	cost = 900
 	category = Thermal
 	subcategory = 0
 	title = Cargo Dragon PICA-X Heatshield
 	manufacturer = SpaceX
 	description = Highly durable heatshield, developed with reuse in mind and able to withstand high-energy reentries.
 	tags = Spacex, Dragon, PicaX, CRS
+	bulkheadProfiles = size3
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -48,25 +45,27 @@ PART
 
 	mass = 0.2
 	dragModelType = default
-	maximum_drag = 0.3
+	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	bodyLiftOnlyUnattachedLift = True
-	bodyLiftOnlyAttachName = bottom
-	buoyancy = 0.0
-	breakingForce = 250
-	breakingTorque = 250
+	breakingForce = 200
+	breakingTorque = 200
 	crashTolerance = 12
-	maxTemp = 2400
-	emissiveConstant = 0.75
-	thermalMassModifier = 1.0
-	skinMassPerArea = 4
+	maxTemp = 773.15
+	skinMaxTemp = 2773.15
+	fuelCrossFeed = False
+	PhysicsSignificance = 0
+	stageOffset = 1
+	childStageOffset = 1
 
 	//use new heat shield tagging system to configure the shield instead
 	heatShieldDiameter  = 3.7
 	heatShieldTag = Lunar
 	resetHeatShieldAblator = true
 	resetHeatShieldMass = false
+	emissiveConstant = 0.6
+	thermalMassModifier = 1.0
+	skinMassPerArea = 4
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -76,7 +75,7 @@ PART
 	{
 		name = ModuleLiftingSurface
 		useInternalDragModel = False
-		deflectionLiftCoeff = 4
+		deflectionLiftCoeff = 2.0
 		liftingSurfaceCurve = CapsuleBottom
 		disableBodyLift = False
 		omnidirectional = False
