--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSC.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSC.cfg
@@ -19,10 +19,8 @@ PART
 	scale = 1.0
 	rescaleFactor = 1.5646
 
-	node_attach = 0.0, 0.0, -0.1, 0.0, 0.0, -1.0
-	node_stack_fairingattach = 0.0, 0.767, 0.0, 0.0, -1.0, 0.0
+	node_stack_bottom = 0.0, 0.767, 0.0, 0.0, -1.0, 0.0
 
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,0,1,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, decouple
@@ -32,15 +30,16 @@ PART
 	//  Title, Description, Category, Techs
 	//  ============================================================================	
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
-	category = Structural
+	TechRequired = advAerodynamics
+	entryCost = 1500
+	cost = 100
+	category = Aero
 	subcategory = 0
 	title = Cargo Dragon Trunk Solar Panel Fairing
 	manufacturer = SpaceX
-	description = A cover to attach to the Dragon trunk in order to make it aerodynamic and shield the solar arrays from the harshness of ascent.  Jettisoned shortly after Dragon separation.
+	description = A cover to attach to the Dragon trunk in order to make it aerodynamic and shield the solar arrays from the harshness of ascent. Jettisoned shortly after Dragon separation.
 	tags = Spacex, Dragon, CRS
+	bulkheadProfiles = size1
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -48,20 +47,18 @@ PART
 
 	mass = 0.025
 	dragModelType = default
-	maximum_drag = 0.3
-	minimum_drag = 0.2
-	angularDrag = 2
-	crashTolerance = 12
 	breakingForce = 250
 	breakingTorque = 250
+	maximum_drag = 0.20
+	minimum_drag = 0.15
+	angularDrag = 2
+	crashTolerance = 12
+	maxTemp = 673.15
+	skinMaxTemp = 773.15
+	fuelCrossFeed = True
+	stagingIcon = DECOUPLER_HOR
 	stageOffset = 1
 	childStageOffset = 1
-	maxTemp = 1073.15
-	skinMaxTemp = 1073.15
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
-	fuelCrossFeed = False
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -70,7 +67,8 @@ PART
 	MODULE
 	{
 		name = ModuleDecouple
-		ejectionForce = 15
-		explosiveNodeID = srf
+		ejectionForce = 20
+		isOmniDecoupler = false
+		explosiveNodeID = bottom
 	}
 }
