--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSM.cfg
@@ -27,7 +27,6 @@ PART
 	node_stack_fairingattach1 = -1.1504, 0.588, 0, 0.0, 1.0, 0.0, 2
 	node_stack_fairingattach2 = 1.1504, 0.588, 0, 0.0, -1.0, 0.0, 2
 
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,0,1,1,1
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
@@ -37,15 +36,16 @@ PART
 	//  Title, Description, Category, Techs
 	//  ============================================================================	
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = largeVolumeContainment
+	entryCost = 2200
+	cost = 500
 	category = Structural
 	subcategory = 0
 	title = Cargo Dragon Trunk
 	manufacturer = SpaceX
 	description = The cargo trunk is quipped with a small battery and decoupler to detach a small payload from inside. Designed to have two solar panels with solar panel covers attached to it in pairs.
 	tags = Spacex, Dragon, CRS
+	bulkheadProfiles = size1, size3
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -53,18 +53,19 @@ PART
 
 	mass = 0.5
 	dragModelType = default
-	maximum_drag = 0.3
-	minimum_drag = 0.2
+	maximum_drag = 0.2
+	minimum_drag = 0.3
 	angularDrag = 2
-	crashTolerance = 12
+	crashTolerance = 10
 	breakingForce = 250
 	breakingTorque = 250
-	maxTemp = 1073.15
-	skinMaxTemp = 1073.15
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
+	maxTemp = 473.15
+	skinMaxTemp = 573.15
 	fuelCrossFeed = True
+	emissiveConstant = 0.90
+	heatConductivity = 0.75
+	thermalMassModifier = 5
+	radiatorHeadroom = 0.5
 
 	//  ============================================================================
 	//  Modules and Resources
