--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSP.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonSP.cfg
@@ -22,22 +22,22 @@ PART
 	node_attach = 0.0, 0.05, 0.0, 0.0, -1.0, 0.0
 	node_stack_solarattach = 0.0, 0.0, 0.0, -1.0, 0.0, 0.0, 2
 
-	// attachment rules: stack, srfAttach, allowStack, allowSrfAttach, allowCollision
 	attachRules = 1,1,0,0,1
 
 	//  ============================================================================
 	//  Title, Description, Category, Techs
 	//  ============================================================================
 
-	TechRequired = unlockParts
-	entryCost = 1
-	cost = 150
+	TechRequired = spaceStationSolarPanels
+	entryCost = 3800
+	cost = 2000
 	category = Electrical
 	subcategory = 0
 	title = Cargo Dragon Trunk Solar Panel
 	manufacturer = SpaceX
 	description = Large and efficient solar panel array designed to attach to Dragon trunk to provide power for orbital purposes.
 	tags = Spacex, Dragon, CRS
+	bulkheadProfiles = srf
 
 	//  ============================================================================
 	//  Thermo, Durability
@@ -45,17 +45,16 @@ PART
 
 	mass = 0.3
 	dragModelType = default
-	maximum_drag = 0.3
+	maximum_drag = 0.2
 	minimum_drag = 0.2
-	angularDrag = 2
-	crashTolerance = 12
+	angularDrag = 1
+	crashTolerance = 8
 	breakingForce = 250
 	breakingTorque = 250
-	maxTemp = 1073.15
-	skinMaxTemp = 1073.15
-	emissiveConstant = 0.6
-	skinMassPerArea = 2
-	thermalMassModifier = 1.0
+	maxTemp = 1200
+	thermalMassModifier = 2.0
+	emissiveConstant = 0.95
+	heatConductivity = 0.04
 
 	//  ============================================================================
 	//  Modules and Resources
@@ -64,14 +63,12 @@ PART
 	MODULE
 	{
 		name = ModuleDeployableSolarPanel
-		animationName = dragonSolar
-		sunTracking = true
-		raycastTransformName = sunCatcher
-		pivotName = sunPivot
-		isBreakable = true
 		resourceName = ElectricCharge
-		chargeRate = 2.0
+		chargeRate = 1.8
 		retractable = false
+		animationName = dragonSolar
+		raycastTransformName = sunCatcher
+		pivotName = sunPivot 
 	}
 
 	useSolarConfig = true
