Hopefully Fix a Bunch of issues.

--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2CM.cfg
@@ -15,12 +15,6 @@ PART
 		model = ROCapsules/Assets/KK/Dragon2CM
 	}
 
-	MODEL 
-	{
-		model = ROCapsules/Assets/KK/Dragon2DP
-		position = 0.0, 2.05, 0.0
-	}
-
 	INTERNAL
 	{
 		name = ROC-Dragon2CMInterior
@@ -33,11 +27,12 @@ PART
 	node_stack_mainChutes = 0.0, 1.481525, -1.557307, 0.0, 1.0, 0.0, 2
 	node_stack_drogueCover = 0.0, 1.2, -1.0, 0.0, 1.0, 0.0, 2
 	node_stack_mainCover = 0.0, 0.0, -1.5, 0.0, 1.0, 0.0, 2
-	node_stack_top = 0.0, 1.974, 0.0, 0.0, 1.0, 0.0, 1
+	node_stack_top = 0.0, 1.88, 0.0, 0.0, 1.0, 0.0, 1
 
-	CoPOffset = 0.0, 0.5, 0.0
+	CoPOffset = 0.0, 1.0, 0.0
 	CoLOffset = 0.0, -0.45, 0.0
-	CoMOffset = 0.0, -1.0, 0.0
+	CoMOffset = 0.0, -0.325, 0.0
+	CenterOfDisplacement = 0.0, 0.5, 0.0
 
 	attachRules = 1,0,1,1,0
 
@@ -64,7 +59,7 @@ PART
 	//  Thermo, Durability
 	//  ============================================================================
 
-	mass = 6.825
+	mass = 6.820
 	dragModelType = default
 	breakingForce = 250
 	breakingTorque = 250
@@ -113,17 +108,6 @@ PART
 		actionGUIName = Toggle Cone
 		startEventGUIName = Open Cone
 		endEventGUIName  = Close Cone
-		layer = 0
-	}
-
-	MODULE
-	{
-		name = ModuleAnimateGeneric
-		animationName = KK_SpX_dockingport
-		actionGUIName = Toggle Dockingport
-		startEventGUIName = Extend Dockingport
-		endEventGUIName = Retract Dockingport
-		layer = 1
 	}
 
 	MODULE
@@ -135,7 +119,7 @@ PART
 		endEventGUIName = Lights Off
 		toggleAction = True
 		defaultActionGroup = Light
-		layer = 2
+		layer = 0
 	}
 
 	MODULE
@@ -163,26 +147,6 @@ PART
 		allowRepeatedSubjects = True
 		evaOnlyStorage = False
 		storageRange = 2.5
-	}
-
-	MODULE
-	{
-		name = ModuleDockingNode
-		referenceAttachNode = top
-		nodeType = NASADock
-		gendered = False
-		acquireForce = 0.5
-		acquireMinFwdDot = 0.8
-		acquireminRollDot = -3.40282347E+38
-		acquireRange = 0.25
-		acquireTorque = 0.5
-		captureMaxRvel = 0.1
-		captureMinFwdDot = 0.998
-		captureMinRollDot = -3.40282347E+38
-		captureRange = 0.05
-		minDistanceToReEngage = 0.25
-		undockEjectionForce = 0.1
-		stagingEnabled = False
 	}
 
 	MODULE
@@ -279,7 +243,7 @@ PART
 	{
 		running1
 		{
-			AUDIO_MULTI_POOL
+			AUDIO_MULTI
 			{
 				channel = Ship
 				transformName = draco
@@ -306,7 +270,7 @@ PART
 		}
 		running2
 		{
-			AUDIO_MULTI_POOL
+			AUDIO_MULTI
 			{
 				channel = Ship
 				transformName = draco_top
@@ -346,14 +310,14 @@ PART
 	{
 		name = ModuleRealAntenna
 		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
-		RFBand = K	//Default to K-band
+		RFBand = S	//Default to S-band
 	}
 
 	MODULE
 	{
 		name = ModuleRealAntenna
 		referenceGain = 1.5
-		RFBand = S		//Default to S-band
+		RFBand = UHF		//Default to UHF-band
 	}
 }
 
