--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute1.cfg
@@ -20,6 +20,8 @@
 
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2	
 
+	CoMOffset = 0.0, 0.0, 1.557307
+
 	attachRules = 1,0,1,1,0
 
 	//  ============================================================================
