--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover1.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover1.cfg
@@ -21,6 +21,8 @@ PART
 	node_stack_drogueChutes = 0.0, 1.4, 0.5, 0.0, 1.0, 0.0, 1
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 2
 
+	CoMOffset = 0.0, 0.0, 1.5
+
 	attachRules = 1,0,1,1,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
