--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Cover2.cfg
@@ -20,6 +20,8 @@ PART
 
 	node_stack_bottom = 0.0, -0.2, 0.0, 0.0, -1.0, 0.0, 2
 
+	CoMOffset = 0.0, 0.0, 1.0
+
 	attachRules = 1,0,1,1,0
 
 	fx_gasBurst_white = 0.0, 0.0, 0.0, 0.0, 1.0, 0.0, decouple
