--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute2.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2Chute2.cfg
@@ -20,6 +20,8 @@
 
 	node_stack_bottom = 0.0, 0.0, 0.0, 0.0, -1.0, 0.0, 1
 
+	CoMOffset = 0.0, -1.4, 1.0
+
 	attachRules = 1,0,1,1,0
 
 	//  ============================================================================
