--- a/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2HS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/KK Dragon/Dragon2HS.cfg
@@ -34,6 +34,10 @@
 	scale = 1.0
 	rescaleFactor = 1.0
 
+	CoPOffset = 0.0, 4.0, 0.0
+	CoLOffset = 0.0, -0.5, 0.0
+	CenterOfDisplacement = 0.0, 2.0, 0.0
+
 	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
