--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCM.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonCM.cfg
@@ -24,10 +24,6 @@ PART
 	node_stack_top = 0.0, 1.1952, 0.0, 0, -1.0, 0, 2
 	node_stack_bottom = 0.0, -0.68, 0.0, 0, -1.0, 0, 2
 
-	CoPOffset = 0.0, 0.5, 0.0
-	CoLOffset = 0.0, -0.45, 0.0
-	CoMOffset = 0.0, -1.0, 0.0
-
 	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
@@ -111,17 +107,17 @@ PART
 		name = ModuleDockingNode
 		referenceAttachNode = dockingNode
 		nodeType = CBM
-		acquireForce = 0.5 // 2
-		acquireMinFwdDot = 0.8 // 0.7
+		acquireForce = 0.5
+		acquireMinFwdDot = 0.8
 		acquireminRollDot = -3.40282347E+38
-		acquireRange = 0.25 // 0.5
-		acquireTorque = 0.5 // 2.0
-		captureMaxRvel = 0.1 // 0.3
+		acquireRange = 0.25
+		acquireTorque = 0.5
+		captureMaxRvel = 0.1
 		captureMinFwdDot = 0.998
 		captureMinRollDot = -3.40282347E+38
-		captureRange = 0.05 // 0.06
-		minDistanceToReEngage = 0.25 // 1.0
-		undockEjectionForce = 0.1 // 10
+		captureRange = 0.05
+		minDistanceToReEngage = 0.25
+		undockEjectionForce = 0.1
 		stagingEnabled = False
 	}
 
@@ -129,10 +125,42 @@ PART
 	{
 		name = ModuleRCSFX
 		stagingEnabled = False
-		thrusterTransformName = rcsThrust
+		thrusterTransformName = rcsThrust1
 		thrusterPower = 0.4
 		resourceFlowMode = STAGE_PRIORITY_FLOW
 		runningEffectName = running1
+		PROPELLANT
+		{
+			name = MMH
+			ratio = 0.5629
+		}
+		PROPELLANT
+		{
+			name = NTO
+			ratio = 0.4371
+		}
+		atmosphereCurve
+		{
+			key = 0 300
+			key = 1 100
+			key = 4 0.001
+		}
+	}
+
+	MODULE
+	{
+		name = ModuleRCSFX
+		stagingEnabled = False
+		thrusterTransformName = rcsThrust2
+		thrusterPower = 0.4
+		enableYaw = False
+		enablePitch = False
+		enableRoll = False
+		enableX = False
+		enableY = False
+		enableZ = True
+		resourceFlowMode = STAGE_PRIORITY_FLOW
+		runningEffectName = running2
 		PROPELLANT
 		{
 			name = MMH
@@ -187,10 +215,10 @@ PART
 	{
 		running1
 		{
-			AUDIO
+			AUDIO_MULTI
 			{
 				channel = Ship
-				transformName = rcsThrust
+				transformName = rcsThrust1
 				clip = sound_rocket_mini
 				volume = 0.0 0.0
 				volume = 0.1 0.0
@@ -203,7 +231,34 @@ PART
 			MODEL_MULTI_PARTICLE
 			{
 				modelName = Squad/FX/Monoprop_small
-				transformName = rcsThrust
+				transformName = rcsThrust1
+				emission = 0.0 0.0
+				emission = 0.1 0.0
+				emission = 1.0 1.0
+				speed = 0.0 0.8
+				speed = 1.0 1.0
+				localRotation = -90, 0, 0
+			}
+		}
+		running2
+		{
+			AUDIO_MULTI
+			{
+				channel = Ship
+				transformName = rcsThrust2
+				clip = sound_rocket_mini
+				volume = 0.0 0.0
+				volume = 0.1 0.0
+				volume = 0.5 0.025
+				volume = 1.0 0.1
+				pitch = 0.0 0.75
+				pitch = 1.0 1.5
+				loop = true
+			}
+			MODEL_MULTI_PARTICLE
+			{
+				modelName = Squad/FX/Monoprop_small
+				transformName = rcsThrust2
 				emission = 0.0 0.0
 				emission = 0.1 0.0
 				emission = 1.0 1.0
@@ -227,14 +282,14 @@ PART
 	{
 		name = ModuleRealAntenna
 		antennaDiameter = 0.8	//Same as Orion because I cannot find any data
-		RFBand = K	//Default to K-band
+		RFBand = S	//Default to S-band
 	}
 
 	MODULE
 	{
 		name = ModuleRealAntenna
 		referenceGain = 1.5
-		RFBand = S		//Default to S-band
+		RFBand = UHF		//Default to UHF-band
 	}
 }
 
