--- a/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
+++ b/GameData/ROCapsules/PartConfigs/Dragon/PhoenixIndustries Dragon/DragonHS.cfg
@@ -22,6 +22,9 @@ PART
 	node_stack_bottom = 0.0, -0.07, 0.0, 0.0, -1.0, 0.0, 2
 	node_stack_top = 0.0, 0.025, 0.0, 0.0, 1.0, 0.0, 2
 
+	CoPOffset = 0.0, 1.0, 0.0
+	CoLOffset = 0.0, -0.15, 0.0
+
 	attachRules = 1,0,1,0,0
 
 	//  ============================================================================
